--- a/public/css/_auth.scss
+++ b/public/css/_auth.scss
@@ -1,7 +1,7 @@
 .register {
     text-align: center;
     margin-top: 30px;
-    font-family: Raleway;
+    font-family: Poppins;
     font-weight: bold;
     .form-row {
         margin-bottom: 5px;
@@ -30,7 +30,7 @@
 .login {
     text-align: center;
     margin-top: 30px;
-    font-family: Raleway;
+    font-family: Poppins;
     font-weight: bold;
     .form-row {
         margin-bottom: 5px;
