--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -1,7 +1,7 @@
 .register {
   text-align: center;
   margin-top: 30px;
-  font-family: Raleway;
+  font-family: Poppins;
   font-weight: bold;
 }
 
@@ -35,7 +35,7 @@
 .login {
   text-align: center;
   margin-top: 30px;
-  font-family: Raleway;
+  font-family: Poppins;
   font-weight: bold;
 }
 
@@ -66,6 +66,7 @@
   margin-top: 10px;
 }
 
+/* Variables */
 * {
   margin: 0px;
   padding: 0px;
@@ -73,19 +74,47 @@
 
 html,
 body {
-  font-family: "Raleway";
+  font-family: Poppins;
   font-weight: bold;
-  background: -webkit-gradient(linear, right top, left top, from(#9c27b0), to(#8ecdff));
-  background: linear-gradient(to left, #9c27b0, #8ecdff);
+  background: #fff;
 }
 
 .cart {
   color: #118897;
 }
 
+.top-header {
+  background: -webkit-gradient(linear, , from(#ccc), to(#c1c1c1));
+  background: linear-gradient("to right", #ccc, #c1c1c1);
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.top-header .social-media {
+  margin-top: 13px;
+  margin-left: 0px;
+}
+
+.top-header .social-media ul li {
+  display: inline;
+  list-style: none;
+  margin-left: 5px;
+}
+
+.top-header .social-media ul li a img {
+  width: 25px;
+  height: 25px;
+}
+
 .brand {
-  font-family: "Raleway";
-  font-weight: 400;
+  font-family: Poppins;
+  font-weight: bold;
+  margin-left: 30px;
 }
 
 .brand a {
@@ -94,6 +123,12 @@ body {
 
 .brand a:hover {
   color: #00ff00;
+}
+
+.brand span {
+  font-weight: bold;
+  color: #00ff00;
+  font-style: italic;
 }
 
 .main-menu li {
@@ -105,9 +140,202 @@ body {
 .main-menu li a {
   color: #fff;
   text-decoration: none;
+  font-weight: bold;
+  margin-top: 10px;
 }
 
 .main-menu li .user-name {
   color: #00ff00;
+}
+
+.contact {
+  color: #fff;
+}
+
+.contact .email {
+  color: #00ff00;
+}
+
+.contact span {
+  font-weight: bold;
+}
+
+.toggle #checkbox {
+  display: none;
+}
+
+.toggle label .bars {
+  color: #fff;
+  display: none;
+}
+
+.toggle label .times {
+  color: #fff;
+  display: none;
+}
+
+.show-products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-negative: inherit;
+      flex-shrink: inherit;
+}
+
+.show-products div {
+  text-align: center;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  width: 350px;
+  margin-left: 10px;
+  padding: 5px;
+}
+
+.show-products div img {
+  height: 200px;
+  width: 200px;
+}
+
+.show-products div h4 {
+  background: #111;
+  color: #fff;
+}
+
+.show-products div a {
+  width: 100px;
+  color: #fff;
+  background: #111;
+  margin-top: 10px;
+  text-decoration: none;
+}
+
+.show-products div p span {
+  font-weight: bold;
+}
+
+.show-products div .btn-add-to-cart {
+  width: 100%;
+}
+
+.paginate {
+  text-align: center;
+  margin: 20px;
+  padding: 10px;
+}
+
+.hidden div {
+  display: none;
+}
+
+.proceed-add-to-cart {
+  margin: 20px;
+  text-align: center;
+}
+
+.proceed-add-to-cart .prod-picture {
+  margin: 20px;
+}
+
+.proceed-add-to-cart .prod-picture img {
+  height: 250px;
+  width: 250px;
+}
+
+.proceed-add-to-cart .prod-picture h3 {
+  background: #111;
+  color: #fff;
+  padding-left: 10px;
+}
+
+.prod-info {
+  margin: 20px;
+  text-align: left;
+}
+
+.column {
+  width: 30px;
+}
+
+.show-case {
+  text-align: center;
+}
+
+.show-case .goal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.show-case .goal div {
+  border: 1px solid #ccc;
+  width: 350px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.final-payment {
+  margin: 30px 10px;
+  padding: 20px;
+}
+
+.form-row {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 960px) {
+  .brand {
+    margin-left: 20px;
+  }
+  .brand a {
+    font-size: 13px;
+  }
+  .main-menu {
+    left: -100%;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 100px;
+    background: #111;
+    margin-top: 0px;
+  }
+  .main-menu.active {
+    left: 0;
+  }
+  .main-menu.active li {
+    display: block;
+    margin-top: 30px;
+    margin-left: 170px;
+  }
+  .contact {
+    display: none;
+  }
+  .toggle label .bars {
+    display: block;
+    margin-right: 10px;
+  }
+  .toggle #checkbox:checked ~ label .bars {
+    display: none;
+  }
+  .toggle #checkbox:checked ~ label .times {
+    display: block;
+    margin-right: 10px;
+  }
 }
 /*# sourceMappingURL=custom-style.css.map */
